[package]
name = "asc"
version = "0.1.1"
edition = "2021"
description = "Atomic Strong Count"
license = "MIT"
repository = "https://github.com/Nugine/asc"
readme = "README.md"
documentation = "https://docs.rs/asc"
keywords = ["arc", "ffi", "sync", "data-structure"]
categories = ["concurrency", "data-structures"]

[dependencies]
serde = { version = "1.0.137", optional = true, default-features = false }
