[package]
name = "asc"
version = "0.2.0"
edition = "2021"
description = "Atomic Strong Count"
license = "MIT"
repository = "https://github.com/Nugine/asc"
readme = "README.md"
documentation = "https://docs.rs/asc"
keywords = ["arc", "ffi", "sync", "data-structure"]
categories = ["concurrency", "data-structures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }
